kubernetes/first-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
  template:
    metadata: 
      labels:
        app: first-app
    spec: 
      containers:
        - name: first-container
          image: darwinwilmut/firstapp:latest
          ports:
            - containerPort: 8080
