kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wilmutd.com
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: first-backend
            port:
              number: 80
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: second-backend
            port:
              number: 80
